# cpp_bootstrappers

./: README.md  cpp_build_system  header_new_cpp_file  header_new_file.py  impl_new_cpp_file  impl_new_file.py  new_build_system  new_build_system.py  new_build_system.sh  new_header_file
build_sys_templates/: .clang-format  CMakeLists.txt  Makefile
build_sys_templates/cmake/: cxx_standards.cmake
build_sys_templates/src/: main.cpp
license_templates/: mit
templates/: CMakeLists.txt  Makefile
